Initial commit: Code flow project with TipVideo component

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "private": true,
   "dependencies": {
     "@remotion/cli": "4.0.399",
+    "@remotion/google-fonts": "^4.0.399",
+    "@remotion/tailwind-v4": "4.0.399",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "remotion": "4.0.399",
-    "@remotion/tailwind-v4": "4.0.399",
     "tailwindcss": "4.0.0"
   },
   "devDependencies": {
